--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,14 @@ name = "display"
 
 [dependencies]
 slint = "0.3.2"
+tokio = { version = "1.23.0", features = ["full"] }
+reqwest = { version = "0.11", features = ["json"] }
+serde = { version = "1.0.150" }
+serde_json = { version = "1.0.89" }
+url = { version = "2.3.1"}
+sha1 = "0.10.5"
+urlencoding = "2.1.2"
+hex = "0.4.3"
 
 [build-dependencies]
 slint-build = "0.3.2"
